# resume-job-matcher

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
data/test/: resume_01_python_senior.txt  resume_02_frontend.txt  resume_03_data_scientist.txt  resume_04_ux_designer.txt  resume_05_marketing.txt  resume_06_java_backend.txt  resume_07_devops.txt  resume_08_hr_specialist.txt  resume_09_project_manager.txt  resume_10_intern_data.txt
docs/: project_logs.md
notebooks/data_analysis/: eda_job_descriptions.py  eda_job_descriptions_cleaned.py  eda_resume_data.py
src/data_preprocessing/: preprocess_cv.py  preprocess_jobs.py
src/embeddings/: embeddings_cv.py  embeddings_jobs.py
src/utils/: create_logs.py  text_utils.py
